cif/org.eclipse.escet.cif.tests/tests/cif2mcrl2/invalid.err
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 17, column 3: Duplicate state invariant.
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 18, column 3: Duplicate state invariant.
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 22, column 13: Automaton "g.no_initial" has no initial location.
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 39, column 20: Discrete variable "g.p.x3" is not used anywhere in the specification.
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 43, column 11: Duplicate state invariant.
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 44, column 11: Duplicate state invariant.
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 52, column 15: Edge is redundantly urgent, since its source location (the location of automaton "g.p") is also urgent.
ERROR: CIF to mCRL2 transformation failed due to unsatisfied preconditions:

  ------------------------------
  (1/21) A list literal is used.
  ------------------------------
   * In automaton "g.p":
     - edge e2 do lb := lb + [false];
                             ^
   * In discrete variable "g.p.lb":
     - disc list bool lb = [true];
                           ^

  ---------------------------
  (2/21) A list type is used.
  ---------------------------
   * In automaton "g.p":
     - edge e2 do lb := lb + [false];
                  ^     ^  ^ ^
   * In discrete variable "g.p.lb":
     - disc list bool lb = [true];
            ^              ^

  -------------------------------------
  (3/21) A real number literal is used.
  -------------------------------------
   * In continuous variable "g.p.cnt":
     - cont cnt der 1.0;
                    ^
   * In continuous variable "g.x":
     - cont x der 1.0;
                  ^

  ---------------------------
  (4/21) A real type is used.
  ---------------------------
   * In continuous variable "g.p.cnt":
     - cont cnt der 1.0;
                    ^
   * In continuous variable "g.x":
     - cont x der 1.0;
                  ^

  -------------------------------
  (5/21) A tuple literal is used.
  -------------------------------
   * In automaton "g.p":
     - edge e1 do (x1, x2) := (1, 1);
                  ^           ^

  ----------------------------
  (6/21) A tuple type is used.
  ----------------------------
   * In automaton "g.p":
     - edge e1 do (x1, x2) := (1, 1);
                  ^           ^

  -------------------------------------------
  (7/21) An input variable reference is used.
  -------------------------------------------
   * In discrete variable "g.p.x3":
     - disc bool x3 = i;
                      ^

  ----------------------------
  (8/21) An invariant is used.
  ----------------------------
   * In group "g":
     - invariant false;
       ^
   * In automaton "g.p":
     - plant invariant false;
             ^
     - plant invariant false;
             ^

  ------------------------------------------------
  (9/21) Automaton has multiple initial locations.
  ------------------------------------------------
   * In group "g":
     - automaton mult_initials:
                 ^

  ------------------------------------------
  (10/21) Automaton has no initial location.
  ------------------------------------------
   * In group "g":
     - automaton no_initial:
                 ^

  ------------------------------------------------------------
  (11/21) Binary operator "+" is used on a list typed operand.
  ------------------------------------------------------------
   * In automaton "g.p":
     - edge e2 do lb := lb + [false];
                           ^

  --------------------------------------------------
  (12/21) Component has an initialization predicate.
  --------------------------------------------------
   * In group "g":
     - initial false;
               ^

  -----------------------------------------------------------------------------------
  (13/21) Discrete variable has an initial value that cannot be evaluated statically.
  -----------------------------------------------------------------------------------
   * In discrete variable "g.p.x3":
     - disc bool x3 = i;
                      ^

  ----------------------------------------------------------------
  (14/21) Discrete variable has multiple potential initial values.
  ----------------------------------------------------------------
   * In automaton "g.p":
     - disc int[1..2] x1 in {1, 2};
                      ^

  ------------------------------------------------------------------------------------------
  (15/21) Discrete variable has multiple potential initial values (any value in its domain).
  ------------------------------------------------------------------------------------------
   * In automaton "g.p":
     - disc int[1..2] x2 in any;
                      ^

  ------------------------------------
  (16/21) Edge has a multi-assignment.
  ------------------------------------
   * In automaton "g.p":
     - edge e1 do (x1, x2) := (1, 1);
                           ^

  --------------------------------
  (17/21) Edge has an 'if' update.
  --------------------------------
   * In automaton "g.p":
     - edge e1 do if true: x1 := 2 end;
                  ^

  -----------------------
  (18/21) Edge is urgent.
  -----------------------
   * In automaton "g.p":
     - edge e1 now;
       ^

  ---------------------------
  (19/21) Location is urgent.
  ---------------------------
   * In automaton "g.p":
     - location:
       ^

  ------------------------------------------
  (20/21) Variable is a continuous variable.
  ------------------------------------------
   * In group "g":
     - cont x der 1.0;
            ^
   * In automaton "g.p":
     - cont cnt der 1.0;
            ^

  --------------------------------------
  (21/21) Variable is an input variable.
  --------------------------------------
   * In group "g":
     - input bool i;
                  ^
